--- a/main.html
+++ b/main.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Alphabetical Article Sorter</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h1>Sorted Bands</h1>
+  <ul id="band"></ul>
 
+  <script>
+    const bands = [
+      'The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 
+      'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 
+      'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 
+      'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'
+    ];
+
+    // Function to remove leading articles
+    function stripArticle(name) {
+      return name.replace(/^(a |an |the )/i, '').trim();
+    }
+
+    // Sort bands ignoring articles
+    const sortedBands = bands.slice().sort((a, b) => {
+      const nameA = stripArticle(a).toLowerCase();
+      const nameB = stripArticle(b).toLowerCase();
+      if (nameA < nameB) return -1;
+      if (nameA > nameB) return 1;
+      return 0;
+    });
+
+    // Add sorted bands to the ul
+    const ul = document.getElementById('band');
+    sortedBands.forEach(band => {
+      const li = document.createElement('li');
+      li.textContent = band;
+      ul.appendChild(li);
+    });
+  </script>
 </body>
-
 </html>
+
